Add filter by assigned to current employee. Add email contact method. Add request assignment to certain employee
