# app/Http/Requests/Request/AssignmentStoreFormRequest.php
@@ -1,0 +1,31 @@
+<?php
+
+namespace App\Http\Requests\Request;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class AssignmentStoreFormRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array
+     */
+    public function rules()
+    {
+        return [
+            'request_id' => ['required', 'int']
+        ];
+    }
+
+}
