# app/Http/Requests/Request/RequestContactFormRequest.php
@@ -4,7 +4,7 @@ namespace App\Http\Requests\Request;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class RequestCreateFormRequest extends FormRequest
+class RequestContactFormRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -16,6 +16,7 @@ class RequestCreateFormRequest extends FormRequest
         return true;
     }
 
+
     /**
      * Get the validation rules that apply to the request.
      *
@@ -24,16 +25,8 @@ class RequestCreateFormRequest extends FormRequest
     public function rules()
     {
         return [
-            'message' => ['required', 'string', 'max:255']
-        ];
-    }
-
-    public function bodyParameters()
-    {
-        return [
-            'message' => [
-                'description' => 'Message of request.'
-            ]
+            'request_id' => ['required', 'int'],
+            'message' => ['required', 'string', 'max:10000']
         ];
     }
 }
