# app/Models/Assignment.php
@@ -1,0 +1,49 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+/**
+ * App\Models\Assignment
+ *
+ * @property int $id
+ * @property int $employee_id
+ * @property int $request_id
+ * @property \Illuminate\Support\Carbon|null $created_at
+ * @property \Illuminate\Support\Carbon|null $updated_at
+ * @property-read \App\Models\User $employee
+ * @property-read \App\Models\Request|null $request
+ * @method static \Illuminate\Database\Eloquent\Builder|Assignment newModelQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Assignment newQuery()
+ * @method static \Illuminate\Database\Eloquent\Builder|Assignment query()
+ * @method static \Illuminate\Database\Eloquent\Builder|Assignment whereCreatedAt($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Assignment whereEmployeeId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Assignment whereId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Assignment whereRequestId($value)
+ * @method static \Illuminate\Database\Eloquent\Builder|Assignment whereUpdatedAt($value)
+ * @mixin \Eloquent
+ * @property int $user_id
+ * @property-read \App\Models\User|null $user
+ * @method static \Illuminate\Database\Eloquent\Builder|Assignment whereUserId($value)
+ */
+class Assignment extends Model
+{
+    use HasFactory;
+
+    protected $fillable = ['request_id'];
+    protected $casts = [
+        'user_id' => 'int'
+    ];
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+
+    public function request()
+    {
+        return $this->belongsTo(Request::class);
+    }
+}
