# resources/views/emails/request/contact.blade.php
@@ -1,0 +1,11 @@
+<div>
+    <h1>
+        Заявка номер {{$requestId}}.
+    </h1>
+</div>
+<hr>
+<div>
+    <h3>
+        {{$employeeMessage}}
+    </h3>
+</div>
