# routes/api.php
@@ -1,5 +1,6 @@
 <?php
 
+use App\Http\Controllers\AssignmentController;
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\RequestController;
 use Illuminate\Support\Facades\Route;
@@ -10,4 +11,7 @@ Route::post('/register-employee', [AuthController::class, 'registerEmployee']);
 
 Route::post('/login', [AuthController::class, 'login']);
 
+Route::post('/request-contact', [RequestController::class, 'contact']);
+
 Route::resource('/requests', RequestController::class)->only(['index', 'store', 'update']);
+Route::resource('/assignments', AssignmentController::class)->only(['store']);
